# barcodes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: gen_all.rs
src/: lib.rs  qrcode.rs
src/common/: buffer.rs  errors.rs  image_output.rs  mod.rs  output.rs  svg.rs  traits.rs  types.rs
src/ean_upc/: ean13.rs  ean8.rs  mod.rs  upca.rs  upce.rs
src/gs1/: databar.rs  gs1_128.rs  mod.rs
src/linear/: codabar.rs  code128.rs  code39.rs  code93.rs  itf.rs  mod.rs
src/postal/: imb.rs  imb_table.rs  mod.rs  rm4scc.rs
src/twod/: aztec.rs  datamatrix.rs  mod.rs  pdf417.rs  pdf417_table.rs
