[package]
name = "barcode"
version = "0.1.0"
edition = "2024"
description = "Universal Bar/QR codes library"
keywords = ["barcode", "qrcode", "ean", "code128", "pdf417"]
categories = ["encoding", "no-std"]
license = "MIT"

[features]
default = []
std = []
image = ["std", "dep:image"]

[dependencies]

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png", "gif", "webp"]

[package.metadata.docs.rs]
all-features = true
