[package]
name = "barcodes"
version = "0.2.3"
edition = "2024"
description = "Universal Bar/QR codes library"
keywords = ["barcode", "qrcode", "ean", "code128", "pdf417"]
categories = ["encoding", "no-std"]
license = "MIT"
repository = "https://github.com/ashaffah/barcodes"
readme = "README.md"
exclude = ["/examples", "/generated_barcodes", ".github"]

[features]
default = []
alloc = []
std = ["alloc"]
image = ["std", "dep:image"]

[dependencies]

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png", "gif", "webp"]

[[example]]
name = "gen_all"
required-features = ["image"]

[package.metadata.docs.rs]
all-features = true
